--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>the-zoomeee | Portfolio</title>
+  <title>Raju Choudhary</title>
   <meta name="description" content="Self Developed personal website build with React.js">
 </head>
 
